test/classes/initializers/records/checking-copies-bad.good
checking-copies-bad.chpl:13: In function 'main':
checking-copies-bad.chpl:15: error: No copy constructor for initializer
